Fix code snippets on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -28,6 +28,11 @@
   .post-description-container > .description {
     display: none;
   }
+
+  pre,
+  code {
+    width: 90% !important;
+  }
 }
 
 * {
